# td_flow

./: .gitignore  AGENTS.md  README.md  environment.yml  pyproject.toml
doc/: backbone_notes.md  math.md  plan.md
doc/figures/: pointmass_policy_conditioned_occupancy_latest.json
scripts/: run_pointmass_td2_ablation_suite.sh
src/td_flow/: __init__.py  config.py  data.py  dataset_stats.py  model.py  module.py  ode.py  paths.py  planner.py  rollout.py  sample_successors.py  target.py  train.py
src/td_flow/pointmass/: __init__.py  analyze_bootstrap_path_over_time.py  analyze_td2_failure.py  audit_pipeline.py  compare_action_conditioned_successors.py  compare_bootstrap_target_occupancy.py  eval_loop_policy.py  generate_policy_dataset.py  loop_policy.py  measure_action_shuffle_sensitivity.py  measure_transition_support.py  plot_discounted_occupancy.py  plot_policy_conditioned_occupancy.py  relabel_policy_actions.py  train_near_exact_td2.py
src/td_flow/toy/: analyze_td2_targets.py  generate_circle_exploration_dataset.py  generate_circle_policy_dataset.py  measure_circle_density_metrics.py  plot_circle_exploration_exact_comparison.py  plot_circle_policy_conditioned_occupancy.py
tests/: test_data.py  test_model.py  test_ode.py  test_paths.py  test_planner.py  test_rollout.py  test_sample_successors.py  test_train.py
tests/pointmass/: __init__.py  test_generate_policy_dataset.py  test_loop_policy.py  test_plot_policy_conditioned_occupancy.py  test_relabel_policy_actions.py
tests/toy/: test_generate_circle_exploration_dataset.py  test_generate_circle_policy_dataset.py
